--- a/crimson/templates/base.html
+++ b/crimson/templates/base.html
@@ -65,7 +65,7 @@
                      </li>
                      
                      <li class="nav-item">
-                        <a class="nav-link text-dark" href="/accounts/payment/">App</a>
+                        <a class="nav-link text-dark" href="/accounts/payment/">Build App</a>
                      </li>
                      <!-- <li class="nav-item">
                         <a class="nav-link text-dark" href="#">Profile</a>
