--- a/crimson/templates/account/password_reset_from_key_done.html
+++ b/crimson/templates/account/password_reset_from_key_done.html
@@ -30,7 +30,7 @@
 <div class="container web border border-info rounded">
     <h1>{% trans "Change Password" %}</h1>
     <p>{% trans 'Your password is now changed.' %}</p>
-    Click here to go<a href="/"> Home page</a>
+    Click here to go<a href="/accounts/login/"> Login Page</a>
     <br /><br /><br />
 </div>
 {% endblock %}
