--- a/crimson/templates/payment/payment_cancelled.html
+++ b/crimson/templates/payment/payment_cancelled.html
@@ -1,12 +1,22 @@
 {% extends "base.html" %}
+{% load staticfiles %}
+
 {% block body %}
+<div class="main">
+        <section class="hero-section ptb-100 background-img full-screen">
+                <div class="container">
+                        <div class="row align-items-center justify-content-center">
+                                <div class="col-md-9 col-lg-7">
+                                        <div class="hero-content-left text-white text-center">
+                                                <h1 class="text-white">Your Payment is Cancelled !</h1>
+                                                <p class="lead"><a href="/accounts/payment/" class="text-light"><u>Click here to our Home Page.</u></a>
+                                                </p>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
+        </section>
+</div>
 
-<h1> Payment Canceled to CrimsonInsight</h1>
-
-        <h2>POST</h2>
-        {{post}}
-
-        <h2>GET</h2>
-        {{get}}
 
 {% endblock %}
