--- a/crimson/templates/account/signup.html
+++ b/crimson/templates/account/signup.html
@@ -69,7 +69,7 @@
                                             <span class="ti-lock color-primary"></span>
                                         </div>
                                         <input type="password" name="password1" required_id="id_password1" class="form-control"
-                                               placeholder="Enter your password">
+                                               placeholder="Ex: qwerty@1234">
                                     </div>
                                 </div>
                                 <!-- Password -->
