modify in static in base.html assign in another way path

--- a/crimson/templates/accounts/index.html
+++ b/crimson/templates/accounts/index.html
@@ -36,20 +36,20 @@
                 <div class="col-md-6 col-lg-5">
                     <div class="hero-animation-img">
                         <img class="img-fluid d-block m-auto animation-one"
-                            src="../../../static/accounts/img/Telemedicine_01.svg" width="150" alt="animation image">
+                            src="{% static 'accounts/img/Telemedicine_01.svg' %}" width="150" alt="animation image">
                         <img class="img-fluid d-none d-lg-block animation-two"
-                            src="../../../static/accounts/img/hero-animation-01.svg" alt="animation image" width="120">
+                            src="{% static 'accounts/img/hero-animation-01.svg' %}" alt="animation image" width="120">
                         <img class="img-fluid d-none d-lg-block animation-three"
-                            src="../../../static/accounts/img/Telemedicine_03.svg" alt="animation image" width="120">
+                            src="{% static 'accounts/img/Telemedicine_03.svg' %}" alt="animation image" width="120">
                         <img class="img-fluid d-none d-lg-block animation-four"
-                            src="../../../static/accounts/img/hero-animation-03.svg" alt="animation image" width="200">
+                            src="{% static 'accounts/img/hero-animation-01.svg' %} alt="animation image" width="200">
                     </div>
                 </div>
             </div>
         </div>
 
         <!--shape image start-->
-        <img src="../../../static/accounts/img/hero-bg-shape-2.svg" class="shape-image" alt="shape image">
+        <img src="{% static 'accounts/img/hero-bg-shape-2.svg' %}" class="shape-image" alt="shape image">
         <!--shape image end-->
     </section>
     <!--hero section end-->
