modify in email

--- a/crimson/templates/dashboard.html
+++ b/crimson/templates/dashboard.html
@@ -54,12 +54,12 @@
                 </div>
                 <ul class="navbar-nav navbar-right">
                     <li>
-                        <a href="#" class=" has-icon text-danger"> <i class="fas fa-sign-out-alt"></i>
+                        <a href="/dashboard/" class=" has-icon text-danger"> <i class="fas fa-sign-out-alt"></i>
                             Try for free &emsp;
                         </a>
                     </li>
                     <li>
-                        <a href="#" class=" has-icon text-success"> <i class="fas fa-sign-out-alt"></i>
+                        <a href="/accounts/logout/" class=" has-icon text-success"> <i class="fas fa-sign-out-alt"></i>
                             Logout
                         </a>
                     </li>
