--- a/crimson/templates/dashboard/index.html
+++ b/crimson/templates/dashboard/index.html
@@ -248,7 +248,7 @@
       },
       success:function(data){
         if(data.flag3==0)
-          ''
+          window.location="/payment/process/";
         else if(data.flag2==0 && data.flag==0)
           alert("This key already exist for this keystore");
           
