staticfiles error handle

--- a/crimson/templates/account/password_reset_done.html
+++ b/crimson/templates/account/password_reset_done.html
@@ -1,5 +1,5 @@
 {% extends "account/base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block head %}
 <style>
     @media only screen and (max-width: 600px) {
