--- a/crimson/templates/base.html
+++ b/crimson/templates/base.html
@@ -56,7 +56,7 @@
       <!--start navbar-->
       <nav class="navbar navbar-expand-lg fixed-top custom-nav white-bg">
          <div class="container">
-            <a class="navbar-brand" href="/"><img src="/../../../static/accounts/img/logo.png" width="120" alt="logo"
+            <a class="navbar-brand" href="/"><img src="{% static 'accounts/img/logo.png' %}" width="120" alt="logo"
                   class="img-fluid"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
